Update HelloStrings.java